--- a/themes/2025/assets/css/nav.css
+++ b/themes/2025/assets/css/nav.css
@@ -79,6 +79,10 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .main-nav {
+    padding: 2px 10px;
+  }
+
   #menu-button {
     display: block;
     cursor: pointer;
